--- a/index.html
+++ b/index.html
@@ -270,10 +270,12 @@
 												</tbody>
 											</table>
 											<!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 25px; padding-left: 25px; padding-top: 25px; padding-bottom: 25px; font-family: Tahoma, sans-serif"><![endif]-->
-											<div style="color:#ffffff;font-family:Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;line-height:1.2;padding-top:25px;padding-right:25px;padding-bottom:25px;padding-left:25px;">
-												<div class="txtTinyMce-wrapper" style="font-size: 14px; line-height: 1.2; color: #ffffff; font-family: Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif; mso-line-height-alt: 17px;">
-													<p style="margin: 0; font-size: 20px; line-height: 1.2; word-break: break-word; text-align: center; mso-line-height-alt: 24px; margin-top: 0; margin-bottom: 0;"><span style="font-size: 20px;">Wishing you and your loved ones a spectacular </span></p>
-													<p style="margin: 0; font-size: 16px; line-height: 1.2; word-break: break-word; text-align: center; mso-line-height-alt: 19px; margin-top: 0; margin-bottom: 0;"><span style="font-size: 16px;"><strong><span style="font-size: 34px;">4<span style="font-size: 26px;"><sup>th</sup></span> of July!</span></strong><br><span style="font-size: 22px;"><strong>- Granville Homes</strong></span></span></p>
+											<div style="color:#ffffff;font-family:Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;line-height:1.5;padding-top:25px;padding-right:25px;padding-bottom:25px;padding-left:25px;">
+												<div class="txtTinyMce-wrapper" style="font-size: 14px; line-height: 1.5; color: #ffffff; font-family: Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif; mso-line-height-alt: 21px;">
+													<p style="margin: 0; font-size: 20px; line-height: 1.5; word-break: break-word; text-align: center; mso-line-height-alt: 30px; margin-top: 0; margin-bottom: 0;"><span style="font-size: 20px;">Wishing you and your loved ones a spectacular </span></p>
+													<p style="margin: 0; font-size: 16px; line-height: 1.5; word-break: break-word; text-align: center; mso-line-height-alt: 24px; margin-top: 0; margin-bottom: 0;"><span style="font-size: 16px;"><strong><span style="font-size: 34px;">4<span style="font-size: 26px;"><sup>th</sup></span> of July!</span></strong></span></p>
+													<p style="margin: 0; font-size: 14px; line-height: 1.5; word-break: break-word; text-align: center; mso-line-height-alt: 21px; margin-top: 0; margin-bottom: 0;">&nbsp;</p>
+													<p style="margin: 0; font-size: 26px; line-height: 1.5; word-break: break-word; text-align: center; mso-line-height-alt: 39px; margin-top: 0; margin-bottom: 0;"><span style="font-size: 26px;"><span style><strong>❤️<span style="font-size: 24px;">Granville Homes</span></strong></span></span></p>
 												</div>
 											</div>
 											<!--[if mso]></td></tr></table><![endif]-->
